The class InputData is created, contains the data of the initial approximation. the ApproximateSolutionOfSystemsOfLinearEquations class was created, responsible for the formatted data output to the stream.

--- a/ComputationalMathematicsLab2/ComputationalMathematicsLab2.vcxproj.filters
+++ b/ComputationalMathematicsLab2/ComputationalMathematicsLab2.vcxproj.filters
@@ -18,5 +18,22 @@
     <ClCompile Include="ComputationalMathematicsLab2.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="InputData.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ApproximateSolutionOfSystemsOfLinearEquations.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="InputData.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ApproximateSolutionOfSystemsOfLinearEquations.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ApproximateSolutionOfSystemsOfLinearEquations.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
